@@ -9,6 +9,7 @@
     <gnc-act:long-description>
     Most users will want to select this set of accounts.  It includes most commonly used accounts (checking, savings, cash, credit card, income, common expenses).
   </gnc-act:long-description>    
+  <gnc-act:start-selected>1</gnc-act:start-selected>
 <gnc:account version="2.0.0">
   <act:name>Assets</act:name>
   <act:id type="new">98f262dfab9a2b99ac42919dcf58d304</act:id>
