@@ -39,6 +39,7 @@ struct GncExampleAccount_struct
     gchar *short_description;
     gchar *long_description;
     gboolean exclude_from_select_all;
+    gboolean start_selected;
 };
 typedef struct GncExampleAccount_struct GncExampleAccount;
 
